--- a/chalet.html
+++ b/chalet.html
@@ -14,21 +14,187 @@ title: Chalet cocooning – Gérardmer
   <div class="d-flex justify-content-center">
   {% include gallery_from_folder.html folder="/img/chalet" id="chalet" title="Espace de vie du chalet" max_width="900px" %}
   </div>
+ 
+  <!-- ===== Menu sections (sous le carousel) ===== -->
+  <nav class="chalet-tabs" aria-label="Navigation des sections">
+    <div class="chalet-tabs__inner">
+      <a class="chalet-tab is-active" href="#description">Description</a>
+      <a class="chalet-tab" href="#equipements">Équipements</a>
+      <a class="chalet-tab" href="#emplacement">Emplacement</a>
+    </div>
+  </nav>
+
+
+  <section id="description" class="chalet-section">
+    <h3 class="chalet-h3">Description</h3>
   
-  <h3 class="mt-5">Informations</h3>
-  <ul class="mt-3">
-    <li>👥 Jusqu’à 6 personnes</li>
-    <li>🛏️ 3 chambres</li>
-    <li>🛁 1 salle de bain</li>
-    <li>🔥 Poêle à bois</li>
-    <li>🌲 Terrasse avec vue forêt</li>
-    <li>🚗 Parking privé</li>
-  </ul>
+    <!-- Ligne d’infos rapides (comme sur le screen) -->
+    <div class="chalet-meta">
+      <span class="chalet-meta__item">👥 Jusqu’à 6 voyageurs</span>
+      <span class="chalet-meta__item">🛏️ 3 chambres</span>
+      <span class="chalet-meta__item">🛁 1 salle de bain</span>
+      <span class="chalet-meta__item">🔥 Poêle à bois</span>
+    </div>
   
-  <p class="mt-3">
-    Chalet chaleureux et entièrement équipé, idéal pour un séjour cocooning au cœur des Vosges,
-    été comme hiver.
+    <p class="chalet-lead">
+      Bienvenue dans votre <strong>chalet cocooning à Gérardmer</strong> : un refuge chaleureux, pensé pour ralentir,
+      respirer l’air des Vosges et profiter d’un séjour tout confort, <strong>été comme hiver</strong>.
+    </p>
+  
+    <p>
+      Dès l’entrée, l’ambiance boisée, les matières douces et la lumière naturelle créent un véritable <em>nid douillet</em>.
+      Le séjour s’organise autour d’un espace convivial : parfait pour partager un apéro, un jeu de société ou une soirée
+      au chaud pendant que le poêle crépite.
+    </p>
+  
+    <p>
+      Côté nuit, les chambres offrent le calme et l’intimité nécessaires pour recharger les batteries après une journée
+      entre <strong>lac</strong>, <strong>balades</strong> et <strong>randonnées</strong>. Le matin, on prend son café
+      tranquillement avant de partir explorer les environs… ou de simplement profiter de la terrasse.
+    </p>
+  
+    <p class="chalet-callout">
+      <strong>Esprit du lieu :</strong> cosy, simple et authentique — idéal pour un week-end romantique, un séjour en famille
+      ou quelques jours entre amis.
+    </p>
+  
+    <!-- Points forts (chips) -->
+    <div class="chalet-chips">
+      <span class="chip">🌲 Vue nature</span>
+      <span class="chip">🔥 Ambiance cocooning</span>
+      <span class="chip">☕ Espace repas convivial</span>
+      <span class="chip">🚗 Parking privé</span>
+      <span class="chip">🧺 Linge & rangements</span>
+    </div>
+  </section>
+
+  
+<section id="description" class="chalet-section">
+  <h3 class="chalet-h3">Description</h3>
+
+  <!-- Ligne d’infos rapides (comme sur le screen) -->
+  <div class="chalet-meta">
+    <span class="chalet-meta__item">👥 Jusqu’à 6 voyageurs</span>
+    <span class="chalet-meta__item">🛏️ 3 chambres</span>
+    <span class="chalet-meta__item">🛁 1 salle de bain</span>
+    <span class="chalet-meta__item">🔥 Poêle à bois</span>
+  </div>
+
+  <p class="chalet-lead">
+    Bienvenue dans votre <strong>chalet cocooning à Gérardmer</strong> : un refuge chaleureux, pensé pour ralentir,
+    respirer l’air des Vosges et profiter d’un séjour tout confort, <strong>été comme hiver</strong>.
   </p>
+
+  <p>
+    Dès l’entrée, l’ambiance boisée, les matières douces et la lumière naturelle créent un véritable <em>nid douillet</em>.
+    Le séjour s’organise autour d’un espace convivial : parfait pour partager un apéro, un jeu de société ou une soirée
+    au chaud pendant que le poêle crépite.
+  </p>
+
+  <p>
+    Côté nuit, les chambres offrent le calme et l’intimité nécessaires pour recharger les batteries après une journée
+    entre <strong>lac</strong>, <strong>balades</strong> et <strong>randonnées</strong>. Le matin, on prend son café
+    tranquillement avant de partir explorer les environs… ou de simplement profiter de la terrasse.
+  </p>
+
+  <p class="chalet-callout">
+    <strong>Esprit du lieu :</strong> cosy, simple et authentique — idéal pour un week-end romantique, un séjour en famille
+    ou quelques jours entre amis.
+  </p>
+
+  <!-- Points forts (chips) -->
+  <div class="chalet-chips">
+    <span class="chip">🌲 Vue nature</span>
+    <span class="chip">🔥 Ambiance cocooning</span>
+    <span class="chip">☕ Espace repas convivial</span>
+    <span class="chip">🚗 Parking privé</span>
+    <span class="chip">🧺 Linge & rangements</span>
+  </div>
+</section>
+
+
+<section id="equipements" class="chalet-section">
+  <h3 class="chalet-h3">Équipements</h3>
+
+  <p class="chalet-lead">
+    Tout est prévu pour un séjour confortable à Gérardmer : cuisine équipée, confort intérieur et essentiels pratiques.
+  </p>
+
+  <div class="equip-grid">
+    <div class="equip-card">
+      <div class="equip-title">🍳 Cuisine & repas</div>
+      <ul class="equip-list">
+        <li>Cuisine équipée (plaques, four ou micro-ondes selon équipement)</li>
+        <li>Réfrigérateur + congélateur ou compartiment freezer</li>
+        <li>Cafetière / bouilloire</li>
+        <li>Vaisselle & ustensiles pour 6 personnes</li>
+        <li>Coin repas convivial</li>
+      </ul>
+    </div>
+
+    <div class="equip-card">
+      <div class="equip-title">🛋️ Confort intérieur</div>
+      <ul class="equip-list">
+        <li>Salon chaleureux, idéal pour soirées cocooning</li>
+        <li>Poêle à bois / chauffage agréable</li>
+        <li>Rangements pratiques</li>
+        <li>Linge de maison (selon formule)</li>
+        <li>Jeux de société / livres (optionnel)</li>
+      </ul>
+    </div>
+
+    <div class="equip-card">
+      <div class="equip-title">🛁 Salle de bain</div>
+      <ul class="equip-list">
+        <li>Salle de bain fonctionnelle</li>
+        <li>Sèche-cheveux (si disponible)</li>
+        <li>Serviettes (selon formule)</li>
+      </ul>
+    </div>
+
+    <div class="equip-card">
+      <div class="equip-title">🌿 Extérieur</div>
+      <ul class="equip-list">
+        <li>Terrasse avec vue nature</li>
+        <li>Mobilier extérieur (selon saison)</li>
+        <li>Parking privé</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="chalet-chips mt-3">
+    <span class="chip">✅ Idéal en hiver</span>
+    <span class="chip">✅ Séjour famille/amis</span>
+    <span class="chip">✅ Proche nature</span>
+  </div>
+</section>
+
+
+  <section id="emplacement" class="chalet-section">
+    <h3 class="chalet-h3">Emplacement</h3>
+  
+    <p class="chalet-lead">
+      Le chalet se situe à <strong>Gérardmer</strong>, au cœur des Vosges : parfait pour profiter du lac, des sentiers,
+      et de l’ambiance montagne.
+    </p>
+  
+    <div class="map-wrap">
+      <iframe
+        title="Carte - Gérardmer"
+        src="https://www.google.com/maps?q=G%C3%A9rardmer&output=embed"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  
+    <div class="location-box">
+      <div class="location-title">📍 Adresse / Point de rendez-vous</div>
+      <p class="mb-0">
+        <strong>Gérardmer (Vosges)</strong><br>
+        <span class="muted">👉 Remplace ce texte par l’adresse exacte ou un point GPS (option “quartier” si tu veux rester discret).</span>
+      </p>
+    </div>
+  </section>
   
   <h3 class="mt-5">Disponibilités</h3>
   
